# azq

./: .azq_codex_progress_stage1_wave_a.json  .azq_codex_progress_stage1_wave_b.json  .azq_codex_progress_stage2_wave_a.json  .azq_codex_progress_stage2_wave_b.json  .azq_codex_progress_stage2_wave_c.json  .azq_codex_progress_stage2_wave_d.json  .azq_codex_progress_stage3_wave_a.json  .azq_codex_progress_stage3_wave_b.json  .azq_codex_progress_stage3_wave_c.json  .azq_codex_progress_stage3_wave_d.json  .gitignore  AZQ_BOOTSTRAP.md  AZQ_BUILD_TASKS_STAGE_1.md  AZQ_BUILD_TASKS_STAGE_1_WAVE_A.json  AZQ_BUILD_TASKS_STAGE_1_WAVE_B.json  AZQ_BUILD_TASKS_STAGE_2.md  AZQ_BUILD_TASKS_STAGE_2_WAVE_A.json  AZQ_BUILD_TASKS_STAGE_2_WAVE_B.json  AZQ_BUILD_TASKS_STAGE_2_WAVE_C.json  AZQ_BUILD_TASKS_STAGE_2_WAVE_D.json  AZQ_BUILD_TASKS_STAGE_3.md  AZQ_BUILD_TASKS_STAGE_3_WAVE_A.json  AZQ_BUILD_TASKS_STAGE_3_WAVE_B.json  AZQ_BUILD_TASKS_STAGE_3_WAVE_C.json  AZQ_BUILD_TASKS_STAGE_3_WAVE_D.json  AZQ_CHECKS_STAGE_1_WAVE_A.json  AZQ_CHECKS_STAGE_1_WAVE_B.json  AZQ_CHECKS_STAGE_1_WAVE_C.json  AZQ_CHECKS_STAGE_2_WAVEA.json  AZQ_CHECKS_STAGE_2_WAVE_A.json  AZQ_CHECKS_STAGE_2_WAVE_C.json  AZQ_CHECKS_STAGE_2_WAVE_D.json  AZQ_CHECKS_STAGE_3_WAVE_A.json  AZQ_CHECKS_STAGE_3_WAVE_C.json  AZQ_CHECKS_STAGE_3_WAVE_D.json  AZQ_CODEX_PROMPT_TEMPLATE_STAGE_1.md  AZQ_CODEX_RUNBOOK_STAGE_1_WAVE_A.md  AZQ_CODEX_RUNBOOK_STAGE_2_WAVE_A.md  AZQ_COMMAND_MODEL.md  AZQ_ENGINE_SPEC.md  (+17 more)
attic/: AZQ_STAGE_1_WAVE_C_CLOSEOUT.md
azq/: __init__.py  ask.py  cli.py  context_snapshot.py  import_convo.py  openai_client.py  (+3 more)
(+201 files in other folders)
